--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ multianndata==0.0.4
 pandas==2.0.0
 ipykernel==6.22.0
 urllib3==1.26.12
-anndata>=0.9.1
+anndata==0.9.1
 xarray==0.21.0
 scanpy==1.9.3
 squidpy==1.2.3
